# Phishing_Domain_Detection

./: .gitignore  Dockerfile  Flowchart-of-the-Proposed-Model.ppm  LICENSE  README.md  application.py  project.toml  requirements.txt  setup.cfg  setup.py  upload_data.py
.github/workflows/: main.yml
artifacts/: preprocessor.pkl
configs/: config.yaml  schema.yaml
notebooks/: eda+fe+fs+trfms+sclng_mt.ipynb  eda.ipynb  misc.txt
phising_domain_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py  feature.py  requirements.txt
server/static/: style.css
server/templates/: index.html
src/: exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py  tempCodeRunnerFile.py
src/constant/: __init__.py
src/pipeline/: predict_pipeline.py  tempCodeRunnerFile.py  train_pipeline.py
static/: style.css
templates/: index.html
upload_to_db/: upload.ipynb
