[metadata]
license = GNU GENERAL PUBLIC LICENSE
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.10   

[options.extras_require]
testing =
    pytest>=7.1.2
    mypy>=0.971
    flake8>=6.0.0
    tox>=3.25.1
    black>=22.6.0

[options.package_data]
ppd = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py